# Conflict-Monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
data/: README.md
docker/: Dockerfile  docker-compose.yml
notebooks/: README.md
scripts/: backup_database.sh  setup_project.sh
